packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_1.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 90
expression: output
---
==INPUT==


import { $, component, onRender } from '@khulnasoft.com/qwik';

export const renderHeader = $(() => {
    return (
        <div onClick={$((ctx) => console.log(ctx))}/>
    );
});
const renderHeader = component($(() => {
  console.log("mount");
  return render;
}));

============================= test.tsx_renderHeader_zBbHWn4e8Cg.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/qwik";
export const renderHeader_zBbHWn4e8Cg = ()=>{
    return <div onClick={/*#__PURE__*/ qrl(()=>import("./test.tsx_renderHeader_div_onClick_fV2uzAL99u4"), "renderHeader_div_onClick_fV2uzAL99u4")}/>;
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";wCAG8B;IAC1B,QACK,IAAI;AAEb\"}")
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_zBbHWn4e8Cg",
  "entry": null,
  "displayName": "test.tsx_renderHeader",
  "hash": "zBbHWn4e8Cg",
  "canonicalFilename": "test.tsx_renderHeader_zBbHWn4e8Cg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    92,
    175
  ]
}
*/
============================= test.tsx_renderHeader_component_U6Kkv07sbpQ.tsx (ENTRY POINT)==

export const renderHeader_component_U6Kkv07sbpQ = ()=>{
    console.log("mount");
    return render;
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"kDAQiC;IAC/B,QAAQ,GAAG,CAAC;IACZ,OAAO;AACT\"}")
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_component_U6Kkv07sbpQ",
  "entry": null,
  "displayName": "test.tsx_renderHeader_component",
  "hash": "U6Kkv07sbpQ",
  "canonicalFilename": "test.tsx_renderHeader_component_U6Kkv07sbpQ",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    211,
    261
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@khulnasoft.com/qwik";
import { component } from '@khulnasoft.com/qwik';
export const renderHeader = /*#__PURE__*/ qrl(()=>import("./test.tsx_renderHeader_zBbHWn4e8Cg"), "renderHeader_zBbHWn4e8Cg");
const renderHeader = component(/*#__PURE__*/ qrl(()=>import("./test.tsx_renderHeader_component_U6Kkv07sbpQ"), "renderHeader_component_U6Kkv07sbpQ"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";AACA,SAAY,SAAS,QAAkB,mBAAmB;AAE1D,OAAO,MAAM,gHAIV;AACH,MAAM,eAAe\"}")
============================= test.tsx_renderHeader_div_onClick_fV2uzAL99u4.tsx (ENTRY POINT)==

export const renderHeader_div_onClick_fV2uzAL99u4 = (ctx)=>console.log(ctx);
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"oDAKwB,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_div_onClick_fV2uzAL99u4",
  "entry": null,
  "displayName": "test.tsx_renderHeader_div_onClick",
  "hash": "fV2uzAL99u4",
  "canonicalFilename": "test.tsx_renderHeader_div_onClick_fV2uzAL99u4",
  "path": "",
  "extension": "tsx",
  "parent": "renderHeader_zBbHWn4e8Cg",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    137,
    162
  ]
}
*/
== DIAGNOSTICS ==

[]
