packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_5.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 168
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/qwik';
export const Header = component$(() => {
    return (
        <>
            <div onClick={(ctx) => console.log("1")}/>
            <div onClick={$((ctx) => console.log("2"))}/>
        </>
    );
});

============================= test.tsx_Header_component_J4uyIhaBNR4.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/qwik";
export const Header_component_J4uyIhaBNR4 = ()=>{
    return <>
            <div onClick={(ctx)=>console.log("1")}/>
            <div onClick={/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_div_onClick_i7ekvWH3674"), "Header_component_div_onClick_i7ekvWH3674")}/>
        </>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";4CAEiC;IAC7B,SACM;YACE,CAAC,IAAI,SAAS,CAAC,MAAQ,QAAQ,GAAG,CAAC,OAAO;YAC1C,CAAC,IAAI,4IAAwC;QACjD;AAER\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "test.tsx_Header_component_J4uyIhaBNR4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    250
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_J4uyIhaBNR4"), "Header_component_J4uyIhaBNR4"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEA,OAAO,MAAM,uBAAS,uHAOnB\"}")
============================= test.tsx_Header_component_div_onClick_i7ekvWH3674.tsx (ENTRY POINT)==

export const Header_component_div_onClick_i7ekvWH3674 = (ctx)=>console.log("2");
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"wDAM4B,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_div_onClick_i7ekvWH3674",
  "entry": null,
  "displayName": "test.tsx_Header_component_div_onClick",
  "hash": "i7ekvWH3674",
  "canonicalFilename": "test.tsx_Header_component_div_onClick_i7ekvWH3674",
  "path": "",
  "extension": "tsx",
  "parent": "Header_component_J4uyIhaBNR4",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    200,
    225
  ]
}
*/
== DIAGNOSTICS ==

[]
