packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_6.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
snapshot_kind: text
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/qwik';
export const sym1 = $((ctx) => console.log("1"));

============================= test.tsx_sym1_aXUrPXX5Lak.tsx (ENTRY POINT)==

export const sym1_aXUrPXX5Lak = (ctx)=>console.log("1");
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gCAEsB,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "sym1_aXUrPXX5Lak",
  "entry": null,
  "displayName": "test.tsx_sym1",
  "hash": "aXUrPXX5Lak",
  "canonicalFilename": "test.tsx_sym1_aXUrPXX5Lak",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    78,
    103
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@khulnasoft.com/qwik";
export const sym1 = /*#__PURE__*/ qrl(()=>import("./test.tsx_sym1_aXUrPXX5Lak"), "sym1_aXUrPXX5Lak");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";AAEA,OAAO,MAAM,wFAAoC\"}")
== DIAGNOSTICS ==

[]
