packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_9.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 245
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/qwik';
const Header = $((decl1, {decl2}, [decl3]) => {
    const {decl4, key: decl5} = this;
    let [decl6, ...decl7] = stuff;
    const decl8 = 1, decl9;
    function decl10(decl11, {decl12}, [decl13]) {}
    class decl14 {
        method(decl15, {decl16}, [decl17]) {}
    }
    try{}catch(decl18){}
    try{}catch({decl19}){}
});

============================= test.tsx_Header_WjUaUQN7Oxg.tsx (ENTRY POINT)==

export const Header_WjUaUQN7Oxg = (decl1, { decl2 }, [decl3])=>{
    const { decl4, key: decl5 } = this;
    let [decl6, ...decl7] = stuff;
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"kCAEiB,CAAC,OAAO,EAAC,KAAK,EAAC,EAAE,CAAC,MAAM;IACrC,MAAM,EAAC,KAAK,EAAE,KAAK,KAAK,EAAC,GAAG,IAAI;IAChC,IAAI,CAAC,OAAO,GAAG,MAAM,GAAG;AAQ5B\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_WjUaUQN7Oxg",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "WjUaUQN7Oxg",
  "canonicalFilename": "test.tsx_Header_WjUaUQN7Oxg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    69,
    376
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@khulnasoft.com/qwik";
/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_WjUaUQN7Oxg"), "Header_WjUaUQN7Oxg");


Some("{\"version\":3,\"sources\":[],\"names\":[],\"mappings\":\"\"}")
== DIAGNOSTICS ==

[]
